# C-Python-Calculator

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.ninja  setup.py  test.py
.github/workflows/: ci-cd.yml
src/c/: calculator.c  calculator.h
src/python/: __init__.py  interface.py
tests/: test_calculator.c  test_calculator.py
